--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://oguiapotente.online/"
+      location.href = ""
     }
   </script>
 </body>
