--- a/index.html
+++ b/index.html
@@ -128,5 +128,8 @@
       location.href = "https://vinisoaresbusiness.com"
     }
   </script>
+    <footer class="bg-dark py-3 text-center">
+      <div class="text-white"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
+    </footer>
 </body>
 </html>
