--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </div>
 <div id="segunda" class="hide">
 <div class="question">
-<h1>Pergunta 2</h1>
+<h1>Pergunta 2/3</h1>
 <p>Você promete não revelar o segredopara ninguém?</p>
 </div>
 <div class="answer">
