--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <div id="segunda" class="hide">
 <div class="question">
 <h1>Pergunta 2/3</h1>
-<p>Você promete não revelar o segredopara ninguém?</p>
+<p>Você tem a mente aberta para conhecer algo que pode mudar completamente a sua vida?</p>
 </div>
 <div class="answer">
 <button class="btn" onclick="terceira()">SIM</button>
